--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@angular/router": "~8.2.14",
     "@capacitor/core": "1.5.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/spinner-dialog": "^5.21.6",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "angular-csv-ext": "^1.0.2",
+    "cordova-plugin-native-spinner": "^1.1.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
