--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@ag-grid-community/all-modules": "^22.1.1",
     "@angular/animations": "~8.2.14",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
@@ -31,6 +32,7 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "ag-grid-community": "^22.1.1",
     "angular-csv-ext": "^1.0.2",
     "cordova-plugin-native-spinner": "^1.1.3",
     "core-js": "^2.5.4",
