--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "ag-grid-angular": "^22.1.1",
     "ag-grid-community": "^22.1.1",
     "angular-csv-ext": "^1.0.2",
     "cordova-plugin-native-spinner": "^1.1.3",
