--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@capacitor/core": "1.5.0",
+    "@capacitor/ios": "^1.5.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/spinner-dialog": "^5.21.6",
     "@ionic-native/splash-screen": "^5.0.0",
