--- a/package.json
+++ b/package.json
@@ -13,57 +13,59 @@
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-community/all-modules": "^22.1.1",
+    "@ag-grid-community/all-modules": "22.1.1",
+    "@ag-grid-enterprise/all-modules": "22.1.1",
     "@angular/animations": "~8.2.14",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/core": "~8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/core": "^8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@capacitor/core": "1.5.0",
-    "@capacitor/ios": "^1.5.1",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/spinner-dialog": "^5.21.6",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
+    "@capacitor/ios": "^1.5.2",
+    "@ionic-native/core": "^5.23.0",
+    "@ionic-native/spinner-dialog": "^5.23.0",
+    "@ionic-native/splash-screen": "^5.23.0",
+    "@ionic-native/status-bar": "^5.23.0",
+    "@ionic/angular": "^5.0.7",
     "@ionic/storage": "^2.2.0",
-    "@ngx-translate/core": "^12.1.1",
+    "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
-    "ag-grid-angular": "^22.1.1",
-    "ag-grid-community": "^22.1.1",
+    "ag-grid-angular": "22.1.1",
+    "ag-grid-community": "22.1.1",
+    "ag-grid-enterprise": "22.1.1",
     "angular-csv-ext": "^1.0.2",
     "cordova-plugin-native-spinner": "^1.1.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
+    "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "~8.3.23",
+    "@angular/cli": "~8.3.24",
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@capacitor/cli": "1.5.0",
-    "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/angular-toolkit": "^2.2.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "^8.8.1",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
