Make license save! Enhance translations.

--- a/src/main.ts.in
+++ b/src/main.ts.in
@@ -3,10 +3,10 @@ import { enableProdMode } from '@angular/core';
 import { platformBrowserDynamic } from '@angular/platform-browser-dynamic';
 
 import { AppModule } from './app/app.module';
-import { LicenseManager }  from "@ag-grid-enterprise/core";
+import { LicenseManager }  from "ag-grid-enterprise";
 import { environment } from './environments/environment';
 
-LicenseManager.setLicenseKey("For_Trialing_ag-Grid_Only-Not_For_Real_Development_Or_Production_Projects-Valid_Until-30_May_2020_[v2]_MTU5MDc5MzIwMDAwMA==24fe333fb52c9fa7c75155ac14eb8e91");
+LicenseManager.setLicenseKey("##YOUR-LICENSE-KEY###");
 
 if (environment.production) {
   enableProdMode();
