--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-community/all-modules": "22.1.1",
-    "@ag-grid-enterprise/all-modules": "22.1.1",
+    "@ag-grid-community/all-modules": "^23.0.2",
+    "@ag-grid-enterprise/all-modules": "23.0.2",
     "@angular/animations": "~8.2.14",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.2.14",
@@ -35,9 +35,10 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
-    "ag-grid-angular": "22.1.1",
-    "ag-grid-community": "22.1.1",
-    "ag-grid-enterprise": "22.1.1",
+    "ag-grid": "^18.1.2",
+    "ag-grid-angular": "23.0.2",
+    "ag-grid-community": "23.0.2",
+    "ag-grid-enterprise": "23.0.2",
     "angular-csv-ext": "^1.0.2",
     "cordova-plugin-native-spinner": "^1.1.3",
     "core-js": "^2.5.4",
