--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@ag-grid-community/all-modules": "^23.0.2",
     "@ag-grid-enterprise/all-modules": "23.0.2",
-    "@angular/animations": "~8.2.14",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.2.14",
     "@angular/core": "^8.2.14",
@@ -27,14 +27,15 @@
     "@babel/compat-data": "7.8.0",
     "@capacitor/core": "1.5.0",
     "@capacitor/ios": "^1.5.2",
-    "@ionic-native/core": "^5.23.0",
-    "@ionic-native/spinner-dialog": "^5.23.0",
-    "@ionic-native/splash-screen": "^5.23.0",
-    "@ionic-native/status-bar": "^5.23.0",
+    "@ionic-native/core": "^5.24.0",
+    "@ionic-native/spinner-dialog": "^5.24.0",
+    "@ionic-native/splash-screen": "^5.24.0",
+    "@ionic-native/status-bar": "^5.24.0",
     "@ionic/angular": "^5.0.7",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "ag-charts-angular": "^1.0.1",
     "ag-grid": "^18.1.2",
     "ag-grid-angular": "23.0.2",
     "ag-grid-community": "23.0.2",
@@ -43,13 +44,14 @@
     "cordova-plugin-native-spinner": "^1.1.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.5.1",
+    "ng-pick-datetime": "^7.0.0",
+    "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "~8.3.24",
+    "@angular-devkit/build-angular": "^0.803.26",
+    "@angular/cli": "^8.3.26",
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
@@ -61,15 +63,15 @@
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "karma": "^5.0.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "~5.4.0",
-    "ts-node": "^8.8.1",
+    "protractor": "^5.4.4",
+    "ts-node": "^8.9.1",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "^3.7.0"
   },
   "description": "CRANXI/CEPHALIX Serverfrontend"
 }
