--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   "dependencies": {
     "@ag-grid-community/all-modules": "^23.0.2",
     "@ag-grid-enterprise/all-modules": "23.0.2",
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^9.1.3",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "~8.2.14",
+    "@angular/common": "^9.1.3",
+    "@angular/core": "^9.1.3",
+    "@angular/forms": "~9.1.3",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/platform-browser": "~9.1.3",
+    "@angular/platform-browser-dynamic": "~9.1.3",
+    "@angular/router": "~9.1.3",
     "@babel/compat-data": "7.8.0",
     "@capacitor/core": "1.5.0",
     "@capacitor/ios": "^1.5.2",
@@ -46,21 +46,21 @@
     "hammerjs": "^2.0.8",
     "ng-pick-datetime": "^7.0.0",
     "rxjs": "^6.5.5",
-    "tslib": "^1.11.1",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/cli": "^8.3.26",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.901.3",
+    "@angular/cli": "^9.1.3",
+    "@angular/compiler": "~9.1.3",
+    "@angular/compiler-cli": "~9.1.3",
+    "@angular/language-service": "~9.1.3",
     "@capacitor/cli": "1.5.0",
     "@ionic/angular-toolkit": "^2.2.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.2",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^5.0.2",
