--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "hammerjs": "^2.0.8",
     "ng-pick-datetime": "^7.0.0",
     "rxjs": "^6.5.5",
+    "sprintf-js": "^1.1.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
