--- a/package.json
+++ b/package.json
@@ -13,33 +13,31 @@
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-community/all-modules": "^23.0.2",
+    "@ag-grid-community/all-modules": "23.0.2",
     "@ag-grid-enterprise/all-modules": "23.0.2",
-    "@angular/animations": "^9.1.3",
+    "@angular/animations": "^9.1.9",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "^9.1.3",
-    "@angular/core": "^9.1.3",
-    "@angular/forms": "~9.1.3",
+    "@angular/common": "^9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~9.1.3",
-    "@angular/platform-browser-dynamic": "~9.1.3",
-    "@angular/router": "~9.1.3",
+    "@angular/platform-browser": "^9.1.9",
+    "@angular/platform-browser-dynamic": "^9.1.9",
+    "@angular/router": "^9.1.9",
     "@babel/compat-data": "7.8.0",
     "@capacitor/core": "1.5.0",
     "@capacitor/ios": "^1.5.2",
-    "@ionic-native/core": "^5.24.0",
-    "@ionic-native/spinner-dialog": "^5.24.0",
-    "@ionic-native/splash-screen": "^5.24.0",
-    "@ionic-native/status-bar": "^5.24.0",
-    "@ionic/angular": "^5.0.7",
+    "@ionic-native/core": "^5.26.0",
+    "@ionic-native/spinner-dialog": "^5.26.0",
+    "@ionic-native/splash-screen": "^5.26.0",
+    "@ionic-native/status-bar": "^5.26.0",
+    "@ionic/angular": "^5.1.1",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
-    "ag-charts-angular": "^1.0.1",
-    "ag-grid": "^18.1.2",
+    "ag-charts-angular": "^1.2.0",
     "ag-grid-angular": "23.0.2",
     "ag-grid-community": "23.0.2",
-    "ag-grid-enterprise": "23.0.2",
     "angular-csv-ext": "^1.0.2",
     "cordova-plugin-native-spinner": "^1.1.3",
     "core-js": "^2.5.4",
@@ -47,32 +45,32 @@
     "ng-pick-datetime": "^7.0.0",
     "rxjs": "^6.5.5",
     "sprintf-js": "^1.1.2",
-    "tslib": "^1.10.0",
+    "tslib": "^1.13.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.3",
-    "@angular/cli": "^9.1.3",
-    "@angular/compiler": "~9.1.3",
-    "@angular/compiler-cli": "~9.1.3",
-    "@angular/language-service": "~9.1.3",
+    "@angular-devkit/build-angular": "^0.901.7",
+    "@angular/cli": "^9.1.7",
+    "@angular/compiler": "^9.1.9",
+    "@angular/compiler-cli": "^9.1.9",
+    "@angular/language-service": "^9.1.9",
     "@capacitor/cli": "1.5.0",
     "@ionic/angular-toolkit": "^2.2.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.44",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.2",
+    "karma": "^5.0.9",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^5.4.4",
-    "ts-node": "^8.9.1",
+    "ts-node": "^8.10.2",
     "tslint": "~5.15.0",
-    "typescript": "^3.7.0"
+    "typescript": "^3.8.3"
   },
   "description": "CRANXI/CEPHALIX Serverfrontend"
 }
