--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cranix-web",
-  "version": "0.0.1",
+  "version": "4.3.11",
   "author": "Helmuth & Peter Varkoly",
   "homepage": "https://cranix-solutions.de",
   "scripts": {
@@ -15,63 +15,55 @@
   "dependencies": {
     "@ag-grid-community/all-modules": "23.0.2",
     "@ag-grid-enterprise/all-modules": "23.0.2",
-    "@angular/animations": "^9.1.9",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "^9.1.9",
-    "@angular/core": "^9.1.9",
-    "@angular/forms": "^9.1.9",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^9.1.9",
-    "@angular/platform-browser-dynamic": "^9.1.9",
-    "@angular/router": "^9.1.9",
-    "@babel/compat-data": "7.8.0",
-    "@capacitor/core": "1.5.0",
-    "@capacitor/ios": "^1.5.2",
-    "@ionic-native/core": "^5.26.0",
-    "@ionic-native/spinner-dialog": "^5.26.0",
-    "@ionic-native/splash-screen": "^5.26.0",
-    "@ionic-native/status-bar": "^5.26.0",
-    "@ionic/angular": "^5.1.1",
-    "@ionic/storage": "^2.2.0",
-    "@ngx-translate/core": "^12.1.2",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "ag-charts-angular": "^1.2.0",
-    "ag-grid-angular": "23.0.2",
-    "ag-grid-community": "23.0.2",
-    "angular-csv-ext": "^1.0.2",
-    "cordova-plugin-native-spinner": "^1.1.3",
-    "core-js": "^2.5.4",
-    "hammerjs": "^2.0.8",
+    "@angular-devkit/schematics": "^11.2.2",
+    "@angular/animations": "^11.2.3",
+    "@angular/cdk": "^11.2.2",
+    "@angular/common": "^11.2.3",
+    "@angular/core": "^11.2.3",
+    "@angular/forms": "~11.2.0",
+    "@angular/material": "^11.2.2",
+    "@angular/platform-browser": "^11.2.3",
+    "@angular/platform-browser-dynamic": "~11.2.0",
+    "@angular/router": "~11.2.0",
+    "@capacitor/core": "2.4.6",
+    "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^2.3.1",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "ag-charts-angular": "^3.1.0",
+    "ag-charts-community": "^3.1.0",
+    "ag-grid-angular": "^23.0.2",
+    "ag-grid-community": "^23.0.2",
+    "angular-csv-ext": "^1.0.3",
     "ionic-selectable": "^4.7.1",
-    "ng-pick-datetime": "^7.0.0",
-    "rxjs": "^6.5.5",
-    "sprintf-js": "^1.1.2",
-    "tslib": "^1.13.0",
+    "rxjs": "~6.6.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
-    "@angular/cli": "^9.1.7",
-    "@angular/compiler": "^9.1.9",
-    "@angular/compiler-cli": "^9.1.9",
-    "@angular/language-service": "^9.1.9",
-    "@capacitor/cli": "1.5.0",
-    "@ionic/angular-toolkit": "^2.2.0",
-    "@types/jasmine": "~3.3.8",
+    "@angular-devkit/build-angular": "~0.1101.4",
+    "@angular/cli": "~11.1.4",
+    "@angular/compiler": "~11.2.0",
+    "@angular/compiler-cli": "~11.2.0",
+    "@angular/language-service": "~11.2.0",
+    "@capacitor/cli": "2.4.6",
+    "@ionic/angular-toolkit": "^3.1.0",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.44",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.9",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^5.4.4",
-    "ts-node": "^8.10.2",
-    "tslint": "~5.15.0",
-    "typescript": "3.8.3"
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.2.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2"
   },
-  "description": "CRANXI/CEPHALIX Serverfrontend"
+  "description": "An Ionic project"
 }
