Update ngx-quill to 16.2.1 Fix deprecated usage of .subscribe Now we can add an atached file to support questions and responses.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ag-grid-community": "",
     "angular-csv-ext": "",
     "ionic-selectable": "",
-    "ngx-quill": "",
+    "ngx-quill": "^16.2.1",
     "rxjs": "",
     "tslib": "",
     "zone.js": ""
