--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cranix-web",
-  "version": "4.4.11",
+  "version": "4.5.11",
   "author": "Helmuth & Peter Varkoly",
   "homepage": "https://cranix-solutions.de",
   "scripts": {
@@ -33,8 +33,8 @@
     "ag-grid-angular": "",
     "ag-grid-community": "",
     "angular-csv-ext": "",
-    "ionic-selectable": "",
-    "ngx-quill": "^20.0.1",
+    "ionic-selectable": "^5.0.0",
+    "ngx-quill": "",
     "rxjs": "",
     "tslib": "",
     "zone.js": ""
@@ -64,5 +64,5 @@
     "tslint": "",
     "typescript": ""
   },
-  "description": "An Ionic project"
+  "description": "GUI for CRANIX/CEPHALIX"
 }
