Inital version of cranix-fullcalendar

--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
     "@angular/platform-browser-dynamic": "",
     "@angular/router": "",
     "@capacitor/core": "",
+    "@fullcalendar/angular": "^6.1.15",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/rrule": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@ionic/angular": "",
     "@ionic/storage-angular": "",
     "@ngx-translate/core": "",
