Implementing swipe gesture.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ag-grid-angular": "",
     "ag-grid-community": "",
     "angular-csv-ext": "",
+    "hammerjs": "",
     "ionic-selectable": "^5.0.0",
     "ngx-quill": "",
     "rxjs": "",
