Translate header line.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "hammerjs": "",
     "ionic-selectable": "^5.0.0",
     "ngx-quill": "",
+    "rrule": "",
     "rxjs": "",
     "tslib": "",
     "zone.js": ""
